# SFML-Game-Framework

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
Source/: Game.cpp  Game.h  Main.cpp
Source/GUI/: Button.cpp  Button.h  Menu.cpp  Menu.h  MultiMenu.cpp  MultiMenu.h  Panel.h  StackMenu.cpp  StackMenu.h  Textbox.cpp  Textbox.h  Widget.cpp  Widget.h
Source/ResourceManager/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h
Source/States/: StateBase.h  StatePlaying.cpp  StatePlaying.h
Source/Util/: Animation.cpp  Animation.h  FPSCounter.cpp  FPSCounter.h  FileUtil.cpp  FileUtil.h  Maths.h  NonCopyable.h  NonMoveable.h  Random.h  ToggleKey.cpp  ToggleKey.h
scripts/: build.sh  debug.sh  run.sh
src/: Game.cpp  Game.h  main.cpp
src/GUI/: Button.cpp  Button.h  StackMenu.cpp  StackMenu.h  Textbox.cpp  Textbox.h  Widget.cpp  Widget.h
src/ResourceManager/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h
src/States/: StateBase.h  StatePlaying.cpp  StatePlaying.h
src/Util/: Animation.cpp  Animation.h  FPSCounter.cpp  FPSCounter.h  FileUtil.cpp  FileUtil.h  Maths.cpp  NonCopyable.h  NonMoveable.h  Random.h
